--- a/src/components/ThemeToggle/ThemeToggle.module.scss
+++ b/src/components/ThemeToggle/ThemeToggle.module.scss
@@ -1,19 +1,74 @@
 /* ThemeToggle.module.scss */
-.toggleButton {
-  padding: 8px 12px;
-  border-radius: 4px;
-  background-color: #ccc;
-  color: #111;
-  border: none;
+
+// container for switch 
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 80px;
+  height: 40px;
+}
+
+// hides input checkbox, but keeps it accessible
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+// track for inside the switch
+.slider {
+  position: absolute;
   cursor: pointer;
-  transition: background-color 0.3s;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s; // this is for transitioning the background color
+  border-radius: 50px;
+}
+// the circle inside the switch
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: 0.4s;
+}
 
-  &:hover {
-    background-color: #bbb;
-  }
 
-  &.dark {
-    background-color: #444;
-    color: white;
-  }
+input:checked + .slider:before {
+  transform: translateX(40px);
+}
+
+.sun {
+  position: absolute;
+  top: 6px;
+  right:4px;
+  height: 28px;
+  width: 28px;
+  opacity: 1;
+  transition: opacity 0.4s ease;
+}
+
+input:checked ~ .sun {
+  opacity: 0;
+}
+
+.moon {
+  position: absolute;
+  top:6px;
+  left:4px;
+  height: 28px;
+  width: 28px;
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+
+input:checked ~ .moon {
+  opacity: 1;
 }
