updated color scheme

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -22,8 +22,8 @@
 }
 
 html.dark {
-  --bg-color: #111111;
-  --bg-color-secondary: #4a4e69;
+  --bg-color: #04103A;
+  --bg-color-secondary: #70769F;
   --text-color: #f5f5f5;
 
   --border-color: #333333;
