--- a/src/components/ThemeToggle/ThemeToggle.module.scss
+++ b/src/components/ThemeToggle/ThemeToggle.module.scss
@@ -8,6 +8,8 @@
   height: 40px;
 }
 
+
+
 // hides input checkbox, but keeps it accessible
 .switch input {
   opacity: 0;
@@ -23,9 +25,13 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #FFF4A3;
   transition: 0.4s; // this is for transitioning the background color
   border-radius: 50px;
+}
+
+input:checked + .slider {
+  background-color: #0A369D; // this is for the background color when checked
 }
 // the circle inside the switch
 .slider:before {
@@ -66,6 +72,7 @@ input:checked ~ .sun {
   height: 28px;
   width: 28px;
   opacity: 0;
+  color: black;
   transition: opacity 0.4s ease;
 }
 
