fixed import naming

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,6 @@
-@use './_variables' as *;
-@use './_mixins' as *;
-@use './_reset' as *;
+@use './variables' as *;
+@use './mixins' as *;
+@use './reset' as *;
 
 /* globals.scss */
 // update these with variables later
