--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -21,3 +21,19 @@ html.dark {
   --color-seconary: #495057;
   --color-secondary-accent: ##6c757d;
 }
+
+body {
+  font-family: var(--font-fira-sans), sans-serif;
+  font-size: $font-size-base;
+  line-height: 1.2rem;
+  color: var(--color-black);
+  background-color: var(--color-white);
+  margin: 0;
+  padding: 0;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: var(--font-roboto), sans-serif;
+  font-weight: 600;
+  color: var(--color-black);
+}
