fixed broken variables

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,19 +7,19 @@
 :root {
   --color-brand: #4ec1a6;
   --color-red: #e71d36;
-  --color-white: ##ced4da;
+  --color-white: #ced4da;
   --color-black: #212529;
   --color-seconary: #495057;
-  --color-secondary-accent: ##6c757d;
+  --color-secondary-accent: #6c757d;
 }
 
 html.dark {
   --color-brand: #4ec1a6;
   --color-red: #e71d36;
-  --color-white: ##ced4da;
+  --color-white: #ced4da;
   --color-black: #212529;
   --color-seconary: #495057;
-  --color-secondary-accent: ##6c757d;
+  --color-secondary-accent: #6c757d;
 }
 
 body {
