--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,17 +9,13 @@
   --color-red: #e71d36;
   --color-white: #ced4da;
   --color-black: #212529;
+  --color-primary: var(--color-white);
   --color-seconary: #495057;
   --color-secondary-accent: #6c757d;
 }
 
 html.dark {
-  --color-brand: #4ec1a6;
-  --color-red: #e71d36;
-  --color-white: #ced4da;
-  --color-black: #212529;
-  --color-seconary: #495057;
-  --color-secondary-accent: #6c757d;
+    --color-primary: var(--color-black);
 }
 
 body {
@@ -27,13 +23,20 @@ body {
   font-size: $font-size-base;
   line-height: 1.2rem;
   color: var(--color-black);
-  background-color: var(--color-white);
+  background-color: var(--color-primary);
   margin: 0;
   padding: 0;
+    transition: background-color 0.3s ease;
 }
 
 h1,h2,h3,h4,h5,h6 {
   font-family: var(--font-roboto), sans-serif;
   font-weight: 600;
   color: var(--color-black);
+}
+
+.shim {
+  height: 2000px;
+  width: 100px;
+  background-color: var(--color-red);
 }
