--- a/src/components/ThemeToggle/ThemeToggle.module.scss
+++ b/src/components/ThemeToggle/ThemeToggle.module.scss
@@ -6,6 +6,7 @@
   display: inline-block;
   width: 80px;
   height: 40px;
+  margin-right: 12px;
 }
 
 
@@ -31,7 +32,7 @@
 }
 
 input:checked + .slider {
-  background-color: #0A369D; // this is for the background color when checked
+  background-color: var(--color-white); // this is for the background color when checked
 }
 // the circle inside the switch
 .slider:before {
