--- a/src/components/ThemeToggle/ThemeToggle.module.scss
+++ b/src/components/ThemeToggle/ThemeToggle.module.scss
@@ -2,49 +2,49 @@
 
 // container for switch 
 .switch {
-  position: relative;
   display: inline-block;
-  width: 80px;
   height: 40px;
   margin-right: 12px;
+  position: relative;
+  width: 80px;
 }
 
 
 
 // hides input checkbox, but keeps it accessible
 .switch input {
+  height: 0;
   opacity: 0;
   width: 0;
-  height: 0;
 }
 
 // track for inside the switch
 .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #FFF4A3;
-  transition: 0.4s; // this is for transitioning the background color
+  background-color: var(--color-secondary);
   border-radius: 50px;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: 0.4s; // this is for transitioning the background color
 }
 
 input:checked + .slider {
-  background-color: var(--color-white); // this is for the background color when checked
+  background-color: var(--color-secondary); // this is for the background color when checked
 }
 // the circle inside the switch
 .slider:before {
-  position: absolute;
-  content: "";
-  height: 32px;
-  width: 32px;
-  border-radius: 50%;
-  left: 4px;
-  bottom: 4px;
   background-color: white;
+  border-radius: 50%;
+  bottom: 4px;
+  content: "";
+  height: 30px;
+  left: 4px;
+  position: absolute;
   transition: 0.4s;
+  width: 30px;
 }
 
 
@@ -53,13 +53,13 @@ input:checked + .slider:before {
 }
 
 .sun {
-  position: absolute;
-  top: 6px;
-  right:4px;
   height: 28px;
-  width: 28px;
   opacity: 1;
+  position: absolute;
+  right:4px;
+  top: 6px;
   transition: opacity 0.4s ease;
+  width: 28px;
 }
 
 input:checked ~ .sun {
@@ -67,14 +67,14 @@ input:checked ~ .sun {
 }
 
 .moon {
+  color: var(--color-brand);
+  height: 28px;
+  left:4px;
+  opacity: 0;
   position: absolute;
   top:6px;
-  left:4px;
-  height: 28px;
-  width: 28px;
-  opacity: 0;
-  color: black;
   transition: opacity 0.4s ease;
+  width: 28px;
 }
 
 input:checked ~ .moon {
