fixed spelling mistake

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,7 +10,7 @@
   --color-white: #ced4da;
   --color-black: #212529;
   --color-primary: var(--color-white);
-  --color-seconary: #495057;
+  --color-secondary: #495057;
   --color-secondary-accent: #6c757d;
 }
 
