--- a/src/components/ThemeToggle/ThemeToggle.module.scss
+++ b/src/components/ThemeToggle/ThemeToggle.module.scss
@@ -3,10 +3,10 @@
 // container for switch 
 .switch {
   display: inline-block;
-  height: 40px;
-  margin-right: 12px;
+  height: 2.5rem;
+  margin-right: 1rem;
   position: relative;
-  width: 80px;
+  width: 5rem;
 }
 
 
@@ -20,7 +20,7 @@
 
 // track for inside the switch
 .slider {
-  background-color: var(--color-secondary);
+  background-color: var(--color-secondary-accent);
   border-radius: 50px;
   bottom: 0;
   cursor: pointer;
@@ -36,30 +36,31 @@ input:checked + .slider {
 }
 // the circle inside the switch
 .slider:before {
-  background-color: white;
+  background-color: var(--color-white);
   border-radius: 50%;
-  bottom: 4px;
+  top: 0.313rem;
   content: "";
-  height: 30px;
-  left: 4px;
+  height: 1.875rem;
+  left: 0.375rem;
   position: absolute;
   transition: 0.4s;
-  width: 30px;
+  width: 1.875rem;
 }
 
 
 input:checked + .slider:before {
-  transform: translateX(40px);
+  transform: translateX(38px);
 }
 
 .sun {
-  height: 28px;
+  color: var(--color-brand);
+  height: 1.875rem;
   opacity: 1;
   position: absolute;
-  right:4px;
-  top: 6px;
+  right:0.375rem;
+  top: 0.313rem;
   transition: opacity 0.4s ease;
-  width: 28px;
+  width: 1.875rem;
 }
 
 input:checked ~ .sun {
@@ -68,13 +69,13 @@ input:checked ~ .sun {
 
 .moon {
   color: var(--color-brand);
-  height: 28px;
-  left:4px;
+  height: 1.875rem;
+  left:0.375rem;
   opacity: 0;
   position: absolute;
-  top:6px;
+  top:0.313rem;
   transition: opacity 0.4s ease;
-  width: 28px;
+  width: 1.875rem;
 }
 
 input:checked ~ .moon {
