added quotes to strings

--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -3,26 +3,26 @@
 // Color palette
 
 $colors: (
-  brand: #4ec1a6,
-  red: #e71d36,
-  white: #ced4da,
-  black: #212529,
-  gray: #6c757d,
-  gray-dark: #495057,
+  "brand": #4ec1a6,
+  "red": #e71d36,
+  "white": #ced4da,
+  "black": #212529,
+  "gray": #6c757d,
+  "gray-dark": #495057,
 );
 
 $font-size: (
-  base: 16px,
-  sm: 0.875rem, // 14px
-  lg: 1.25rem, // 20px
+  "base": 16px,
+  "sm": 0.875rem, // 14px
+  "lg": 1.25rem, // 20px
 );
 
 $spacing: (
-  xs: 0.25rem, // 4px
-  sm: 0.5rem,  // 8px
-  md: 1rem, // 16px
-  lg: 1.5rem, // 24px
-  xl: 2rem, // 32px
+  "xs": 0.25rem, // 4px
+  "sm": 0.5rem,  // 8px
+  "md": 1rem, // 16px
+  "lg": 1.5rem, // 24px
+  "xl": 2rem, // 32px
 );
 
 // Breakpoints
