--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -34,7 +34,8 @@ body {
   line-height: 1.2rem;
   color: var(--color-black);
   background-color: var(--color-primary);
-  margin: 0;
+  max-width: 1920px;
+  margin: 0 auto;
   padding: 0;
     transition: background-color 0.3s ease;
 }
