--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,9 +1,8 @@
-@use './tokens' as *;
-@use './mixins' as *;
-@use './reset' as *;
+@use "./tokens" as *;
+@use "./mixins" as *;
+@use "./reset" as *;
 
 :root {
-
   // scss variables are source of truth. css variables for use with css modules
   // color palette
 
@@ -25,7 +24,11 @@
 }
 
 :root.dark {
-    --color-primary: var(--color-black);
+  --color-primary: var(--color-black);
+}
+
+html {
+  background-color: var(--color-primary);
 }
 
 body {
@@ -37,17 +40,40 @@ body {
   max-width: 1920px;
   margin: 0 auto;
   padding: 0;
-    transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
 }
 
-h1,h2,h3,h4,h5,h6 {
+:root.dark body {
+  background-color: var(--color-black);
+  color: var(--color-white);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: var(--font-roboto), sans-serif;
   font-weight: 600;
   color: var(--color-black);
 }
 
-.shim {
-  height: 2000px;
-  width: 100px;
-  background-color: var(--color-red);
+:root.dark h1,
+:root.dark h2,
+:root.dark h3,
+:root.dark h4,
+:root.dark h5,
+:root.dark h6 {
+  color: var(--color-white);
+}
+
+main {
+  flex: 1 1 auto;
+  overflow-y: auto;
+  padding: 1rem;
 }
