--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -1,9 +1,13 @@
 // scss variables
 
-// Color palette
+$font-weight-light: 300;
+$font-weight-regular: 400;
+$font-weight-bold: 700;
 
+// Color palette
 $colors: (
   "brand": #4ec1a6,
+  "brand-dark": #2f917a,
   "red": #e71d36,
   "white": #ced4da,
   "black": #212529,
@@ -13,16 +17,24 @@ $colors: (
 
 $font-size: (
   "base": 16px,
-  "sm": 0.875rem, // 14px
-  "lg": 1.25rem, // 20px
+  "sm": 0.875rem,
+  "lg": 1.5rem,
+  "xl": 2.25rem,
+  "xxl": 4.5rem,
 );
 
 $spacing: (
-  "xs": 0.25rem, // 4px
-  "sm": 0.5rem,  // 8px
-  "md": 1rem, // 16px
-  "lg": 1.5rem, // 24px
-  "xl": 2rem, // 32px
+  "xs": 0.25rem,
+  // 4px
+  "sm": 0.5rem,
+  // 8px
+  "md": 1rem,
+  // 16px
+  "lg": 1.5rem,
+  // 24px
+  "xl": 2rem,
+  // 32px
+  "xxl": 3rem, // 48px
 );
 
 // Breakpoints
