--- a/src/components/LandingPage/LandingPage.module.scss
+++ b/src/components/LandingPage/LandingPage.module.scss
@@ -1,3 +1,39 @@
 .container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.descriptionContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  max-width: 800px;
+  margin-top: var(--spacing-lg);
+
+  .description {
+    margin-bottom: var(--spacing-lg);
+  }
+}
+
+.benefitsContainer {
+  display: flex;
+  flex-direction: row;
+  max-width: 1200px;
+  margin-bottom: var(--spacing-lg);
+}
+
+.title {
+  margin-top: var(--spacing-md);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h1 {
+    text-align: center;
+  }
+}
+
+.cta {
+  margin: var(--spacing-lg) 0 var(--spacing-xxl);
 }
