--- a/src/components/LandingPage/LandingPage.module.scss
+++ b/src/components/LandingPage/LandingPage.module.scss
@@ -1,7 +1,28 @@
+@use "@/styles/tokens" as *;
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.title {
+  margin-top: var(--spacing-md);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    text-align: center;
+
+    @media screen and (max-width: $breakpoint-desktop) {
+      font-size: var(--font-size-xxl);
+    }
+
+    @media screen and (max-width: $breakpoint-tablet) {
+      font-size: var(--font-size-xl);
+    }
+  }
 }
 
 .descriptionContainer {
@@ -14,6 +35,14 @@
 
   .description {
     margin-bottom: var(--spacing-lg);
+
+    @media screen and (max-width: $breakpoint-desktop) {
+      font-size: var(--font-size-lg);
+    }
+
+    @media screen and (max-width: $breakpoint-tablet) {
+      font-size: var(--font-size-md);
+    }
   }
 }
 
@@ -22,15 +51,10 @@
   flex-direction: row;
   max-width: 1200px;
   margin-bottom: var(--spacing-lg);
-}
+  gap: var(--spacing-sm);
 
-.title {
-  margin-top: var(--spacing-md);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  h1 {
-    text-align: center;
+  @media screen and (max-width: $breakpoint-tablet) {
+    flex-direction: column;
   }
 }
 
