--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -64,6 +64,11 @@
 .large {
   padding: var(--spacing-sm) var(--spacing-xxl);
   font-size: var(--font-size-lg);
+
+  @media screen and (max-width: $breakpoint-desktop) {
+    padding: var(--spacing-sm) var(--spacing-xl);
+    font-size: var(--font-size-base);
+  }
 }
 
 .disabled {
