--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@use "@/styles/tokens" as *;
+
 :root {
   --header-bg: var(--color-white);
   --icon-color: var(--color-black);
@@ -16,7 +18,7 @@
   background-color: var(--header-bg);
   transition: background-color 0.3s ease;
   position: sticky;
-  z-index: 999;
+  z-index: 900;
   height: 4rem;
   top: 0;
   box-shadow: 4px 4px 4px 0px #00000033;
@@ -54,13 +56,31 @@
       width: 100%;
       align-items: center;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: $breakpoint-tablet) {
         display: none;
       }
     }
 
     .mobileProfileLink {
       color: var(--text-color);
+    }
+  }
+
+  .overlay {
+    position: absolute;
+    background-color: black;
+    width: 100vw;
+    height: 100vh;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    display: none;
+    transition: opacity 0.2s ease;
+
+    &.open {
+      opacity: 0.6;
+      display: flex;
     }
   }
 
@@ -72,7 +92,8 @@
     background-color: var(--header-bg);
     position: absolute;
     height: 100vh;
-    width: 60%;
+    max-width: 400px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     padding: var(--spacing-md);
@@ -91,7 +112,12 @@
       pointer-events: auto;
     }
 
-    .closeButton {
+    .popupWrapper {
+      display: flex;
+      flex-direction: row;
+    }
+
+    .btnContainer {
       display: flex;
       justify-content: flex-end;
 
@@ -103,6 +129,7 @@
         justify-content: center;
         align-items: center;
         padding: 0;
+        margin-right: var(--spacing-md);
       }
 
       .closeIcon {
@@ -111,6 +138,12 @@
         height: 2rem;
         width: 2rem;
         cursor: pointer;
+        transition: all 0.3s ease;
+
+        &:hover {
+          color: #fff;
+          stroke: currentColor;
+        }
       }
     }
   }
@@ -119,6 +152,7 @@
     display: flex;
     align-items: center;
     height: 2.5rem;
+    width: 7.5rem;
   }
 
   .spacer {
