--- a/src/components/ThemeToggle/ThemeToggle.module.scss
+++ b/src/components/ThemeToggle/ThemeToggle.module.scss
@@ -1,6 +1,6 @@
 /* ThemeToggle.module.scss */
 
-// container for switch 
+// container for switch
 .switch {
   display: inline-block;
   height: 2.5rem;
@@ -8,8 +8,6 @@
   position: relative;
   width: 5rem;
 }
-
-
 
 // hides input checkbox, but keeps it accessible
 .switch input {
@@ -32,7 +30,9 @@
 }
 
 input:checked + .slider {
-  background-color: var(--color-secondary); // this is for the background color when checked
+  background-color: var(
+    --color-secondary
+  ); // this is for the background color when checked
 }
 // the circle inside the switch
 .slider:before {
@@ -45,8 +45,8 @@ input:checked + .slider {
   position: absolute;
   transition: 0.4s;
   width: 1.875rem;
+  cursor: pointer;
 }
-
 
 input:checked + .slider:before {
   transform: translateX(38px);
@@ -57,10 +57,11 @@ input:checked + .slider:before {
   height: 1.875rem;
   opacity: 1;
   position: absolute;
-  right:0.375rem;
+  right: 0.375rem;
   top: 0.313rem;
   transition: opacity 0.4s ease;
   width: 1.875rem;
+  pointer-events: none;
 }
 
 input:checked ~ .sun {
@@ -70,12 +71,13 @@ input:checked ~ .sun {
 .moon {
   color: var(--color-brand);
   height: 1.875rem;
-  left:0.375rem;
+  left: 0.375rem;
   opacity: 0;
   position: absolute;
-  top:0.313rem;
+  top: 0.313rem;
   transition: opacity 0.4s ease;
   width: 1.875rem;
+  pointer-events: none;
 }
 
 input:checked ~ .moon {
