--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,9 +1,104 @@
+@use "@/styles/tokens" as *;
 :root {
+  --sidebar-bg: var(--color-white);
+  --sidebar-text-color: var(--color-black);
+  --sidebar-icon-color: var(--color-black);
+  --sidebar-icon-color-hover: var(--color-gray-dark);
+  --sidebar-border-color: var(--color-gray);
+  --sidebar-border-color-accent: var(--color-gray-dark);
 }
 
-:global(.dark) :root {
-  // Define dark mode variables here if needed
+:global(.dark) {
+  --sidebar-bg: var(--color-black);
+  --sidebar-text-color: var(--color-white);
+  --sidebar-icon-color: var(--color-white);
+  --sidebar-icon-color-hover: var(--color-gray-dark);
 }
 
 .sidebar {
+  // hide on mobile. use header component instead
+
+  display: flex;
+  max-width: 2rem;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  background-color: var(--sidebar-bg);
+  transition: all 0.3s ease;
+  border-right: 1px solid var(--sidebar-border-color-accent);
+  padding: var(--spacing-md) 0;
+
+  .searchInput {
+    width: 0;
+    transition: width 0.3s ease;
+    overflow: hidden;
+    border: none;
+    margin-right: 0;
+    border-radius: var(--spacing-xs);
+  }
+
+  .closeButton {
+    display: none;
+    height: 2rem;
+    width: 2rem;
+    background-color: transparent;
+    border: none;
+    .closeIcon {
+      background-color: transparent;
+      color: var(--sidebar-icon-color);
+
+      &:hover {
+        color: var(--sidebar-border-color);
+      }
+    }
+  }
+
+  .openButton {
+    height: 2rem;
+    width: 2rem;
+    background-color: transparent;
+    border: none;
+    .openIcon {
+      background-color: transparent;
+      color: var(--sidebar-icon-color);
+
+      &:hover {
+        color: var(--sidebar-icon-color-hover);
+      }
+    }
+  }
+
+  .topbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  &.open {
+    max-width: 300px;
+    transition: all 0.3s ease;
+    padding: var(--spacing-md);
+    border-right: 1px solid var(--sidebar-border-color);
+
+    .searchInput {
+      width: 100%;
+      margin-right: var(--spacing-md);
+    }
+
+    .topbar {
+      justify-content: center;
+    }
+
+    .closeButton {
+      display: block;
+    }
+
+    .openButton {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: $breakpoint-tablet) {
+    display: none;
+  }
 }
