updated font weights to better match other scss variables

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,6 +20,10 @@
     --spacing-#{$name}: #{$value};
   }
 
+  @each $name, $value in $font-weight {
+    --font-weight-#{$name}: #{$value};
+  }
+
   --color-primary: var(--color-white);
   --color-secondary: var(--color-gray-dark);
   --color-secondary-accent: var(--color-gray);
