--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -1,8 +1,10 @@
 // scss variables
 
-$font-weight-light: 300;
-$font-weight-regular: 400;
-$font-weight-bold: 700;
+$font-weight: (
+  "light": 300,
+  "regular": 400,
+  "bold": 700,
+);
 
 // Color palette
 $colors: (
