--- a/src/components/Chatbox/Chatbox.module.scss
+++ b/src/components/Chatbox/Chatbox.module.scss
@@ -41,6 +41,7 @@
   .bottom {
     display: flex;
     flex-direction: row;
+    margin-top: var(--spacing-md);
 
     .fileButton {
       background-color: var(--color-gray);
@@ -67,6 +68,23 @@
 
     .spacer {
       flex-grow: 1;
+    }
+
+    .sendButton {
+      background-color: var(--color-gray);
+      cursor: pointer;
+      border: 1px solid var(--color-brand);
+      border-radius: 2px;
+      height: 1.5rem;
+      width: 1.5rem;
+
+      .sendIcon {
+        width: 1.25rem;
+        height: 1.25rem;
+        color: var(--color-brand);
+        fill: var(--color-brand);
+        margin: auto;
+      }
     }
   }
 }
