--- a/src/components/Chatbox/Chatbox.module.scss
+++ b/src/components/Chatbox/Chatbox.module.scss
@@ -108,6 +108,7 @@
         color: var(--color-brand);
         fill: var(--color-brand);
         margin: auto;
+        pointer-events: none;
       }
     }
   }
