--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -78,6 +78,13 @@
     justify-content: space-between;
   }
 
+  .chatList {
+    overflow: hidden;
+    width: 0;
+    transition: all 0.3s ease;
+    text-wrap: nowrap;
+  }
+
   &.open {
     max-width: 300px;
     transition: all 0.3s ease;
@@ -99,6 +106,11 @@
 
     .openButton {
       display: none;
+    }
+
+    .chatList {
+      width: 100%;
+      overflow-y: auto;
     }
   }
 
