--- a/src/components/ChatListItem/ChatListItem.module.scss
+++ b/src/components/ChatListItem/ChatListItem.module.scss
@@ -10,10 +10,38 @@
   --chatlistitem-bg: var(--color-white);
 }
 .item {
+  border: 1px solid transparent;
+  padding: var(--spacing-xs);
+  border-radius: var(--spacing-xs);
   width: 100%;
   display: flex;
   flex-direction: row;
   position: relative;
+  margin-bottom: var(--spacing-xs);
+  transition: all 0.2s ease;
+  box-sizing: border-box;
+
+  &:hover {
+    border: 1px solid var(--color-gray);
+  }
+
+  .chatLink {
+    font-size: var(--font-size-sm);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    font-family: var(--font-roboto);
+    cursor: pointer;
+  }
+
+  // replace
+  .renameInput {
+    padding: 4px 8px;
+    border: 1px solid var(--color-gray-300);
+    border-radius: 4px;
+    width: 100%;
+    font-size: inherit;
+  }
 
   .spacer {
     flex-grow: 1;
@@ -25,7 +53,6 @@
     border-radius: 50%;
     cursor: pointer;
     transition: all 0.2s ease;
-    padding: var(--spacing-xs);
 
     &:hover {
       background-color: var(--chatlistitem-options-hover);
