--- a/src/components/ChatListItem/ChatListItem.module.scss
+++ b/src/components/ChatListItem/ChatListItem.module.scss
@@ -11,18 +11,17 @@
 }
 .item {
   border: 1px solid transparent;
-  padding: var(--spacing-xs);
   border-radius: var(--spacing-xs);
   width: 100%;
   display: flex;
   flex-direction: row;
   position: relative;
-  margin-bottom: var(--spacing-xs);
   transition: all 0.2s ease;
   box-sizing: border-box;
 
   &:hover {
-    border: 1px solid var(--color-gray);
+    outline: 1px solid var(--color-gray);
+    outline-offset: 1px;
   }
 
   .chatLink {
@@ -36,11 +35,13 @@
 
   // replace
   .renameInput {
-    padding: 4px 8px;
+    //padding: 4px 8px;
     border: 1px solid var(--color-gray-300);
     border-radius: 4px;
     width: 100%;
     font-size: inherit;
+    color: inherit;
+    background: none;
   }
 
   .spacer {
