--- a/src/app/chat/layout.module.scss
+++ b/src/app/chat/layout.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex: 1 1 auto;
   height: calc(100vh - 4rem); // Adjust for header height
+  position: relative;
 
   .main {
     padding: 0;
@@ -12,13 +13,12 @@
 
     .container {
       display: flex;
-      height: 100%;
       overflow-y: auto;
       width: 100%;
       flex: 1 1 auto;
       flex-direction: column;
       align-items: center;
-      padding-top: var(--spacing-lg);
+      position: relative;
     }
   }
 }
