--- a/src/components/AnimateContent/AnimateContent.module.scss
+++ b/src/components/AnimateContent/AnimateContent.module.scss
@@ -1,3 +1,13 @@
 .animateWrapper {
-  background-color: red;
+}
+
+.animate {
+  opacity: 0;
+  animation: fadeIn 0.3s ease forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
 }
