--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -19,7 +19,7 @@
   // hide on mobile. use header component instead
 
   display: flex;
-  max-width: 2rem;
+  max-width: 0;
   width: 100%;
   height: 100%;
   flex-direction: column;
@@ -59,8 +59,17 @@
     height: 2rem;
     width: 2rem;
     background-color: transparent;
-    border: none;
+    //border: none;
     cursor: pointer;
+    position: absolute;
+    left: 1rem;
+    z-index: 99;
+    padding: 0.25rem;
+    inset: none;
+    border: 1px solid var(--sidebar-border-color-accent);
+    border-radius: 25%;
+    opacity: 1;
+    transition: all 0.3s ease;
 
     .openIcon {
       background-color: transparent;
@@ -122,7 +131,7 @@
     }
 
     .openButton {
-      display: none;
+      opacity: 0;
     }
 
     .chatList {
