renamed class for better clarity

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -117,7 +117,7 @@
       pointer-events: auto;
     }
 
-    .popupWrapper {
+    .topWrapper {
       display: flex;
       flex-direction: row;
     }
