--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -134,7 +134,7 @@
         justify-content: center;
         align-items: center;
         padding: 0;
-        margin-right: var(--spacing-md);
+        //margin-right: var(--spacing-md);
       }
 
       .closeIcon {
