--- a/src/components/Chatbox/Chatbox.module.scss
+++ b/src/components/Chatbox/Chatbox.module.scss
@@ -24,6 +24,10 @@
   flex: 0 0 auto;
   padding: var(--spacing-md);
 
+  &.chatboxActive {
+    border: 1px solid var(--color-brand);
+  }
+
   .input {
     textarea {
       resize: none;
