--- a/src/components/Chatbox/Chatbox.module.scss
+++ b/src/components/Chatbox/Chatbox.module.scss
@@ -24,6 +24,30 @@
   flex: 0 0 auto;
   padding: var(--spacing-md);
 
+  .buttonRow {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    button {
+      background: transparent;
+      border: none;
+
+      .icon {
+        color: var(--chatbox-text-color);
+        cursor: pointer;
+        height: 1rem;
+        width: 1rem;
+        margin-left: var(--spacing-xs);
+
+        &:hover {
+          color: red;
+          transition: 0.2s ease-in;
+        }
+      }
+    }
+  }
+
   &.chatboxActive {
     border: 1px solid var(--color-brand);
   }
