--- a/src/app/login/login.module.scss
+++ b/src/app/login/login.module.scss
@@ -1,13 +1,5 @@
 @use "@/styles/tokens" as *;
 
-:root {
-  --login-text-color: var(--color-black);
-}
-
-:global(.dark) {
-  --login-text-color: #fff;
-}
-
 .wrapper {
   width: 100%;
   display: flex;
@@ -49,7 +41,7 @@
       border: 1px solid var(--color-brand-dark);
       height: var(--spacing-xxl);
       border-radius: var(--spacing-sm);
-      color: var(--login-text-color);
+      color: var(--text-color);
       padding: 0 var(--spacing-sm);
 
       &:focus,
@@ -63,7 +55,7 @@
   .loginWrapper {
     .loginButton {
       font-family: var(--font-roboto), sans-serif;
-      color: var(--login-text-color);
+      color: var(--text-color);
       width: 350px;
       height: var(--spacing-xxl);
       background-color: var(--color-brand);
@@ -108,7 +100,7 @@
       height: 1px;
       display: block;
       width: 100px;
-      background-color: var(--login-text-color);
+      background-color: var(--text-color);
     }
 
     .title {
