--- a/src/app/signup/signup.module.scss
+++ b/src/app/signup/signup.module.scss
@@ -1,13 +1,5 @@
 @use "@/styles/tokens" as *;
 
-:root {
-  --login-text-color: var(--color-black);
-}
-
-:global(.dark) {
-  --login-text-color: #fff;
-}
-
 // lots of these styles are shared with login. figure out how to share them
 .signupContainer {
   display: flex;
@@ -43,7 +35,7 @@
       border: 1px solid var(--color-brand-dark);
       height: var(--spacing-xxl);
       border-radius: var(--spacing-sm);
-      color: var(--login-text-color);
+      color: var(--text-color);
       padding: 0 var(--spacing-sm);
 
       &:focus,
