--- a/src/components/SettingsMenu/SettingsMenu.module.scss
+++ b/src/components/SettingsMenu/SettingsMenu.module.scss
@@ -1,11 +1,3 @@
-:root {
-  --settings-icon-color: var(--color-black);
-}
-
-:global(.dark) {
-  --settings-icon-color: var(--color-white);
-}
-
 .container {
   display: flex;
   position: relative;
@@ -20,8 +12,7 @@
   position: absolute;
   top: 2rem;
   right: 0;
-  background-color: var(--color-black)
-
+  background-color: var(--color-black);
 }
 
 .settingsButton {
